--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Montserrat:ital,wght@0,500;1,500&family=Syne:wght@700&display=swap"/>
     </head>
     <body>
-        
+        <header class="top">
+            <a href="#">
+                <img src="assets/logo.svg" alt="" />
+            </a>
+            <a href="#">
+                <img src="assets/icons/shopping-bag.svg" alt="" />
+                <span>1</span>
+            </a>
+        </header>
     </body>
 </html> 
